--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@remix-run/node": "^2.16.7",
+    "@stripe/stripe-js": "^7.3.1",
     "@vercel/blob": "^1.1.1",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
@@ -23,7 +24,8 @@
     "mongoose": "^8.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "stripe": "^18.2.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
